--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,10 +1,11 @@
 @use "sass:map";
 @use "../../theme/varables/colors_variables" as colors_variables;
 @use "../../theme/varables/font_size_variables" as font_size_variables;
+@use "../../theme/varables/sizes_variables" as sizes_variables;
 
 .header {
   width: 100%;
-  height: 56px;
+  height: sizes_variables.$header-height;
   display: flex;
   border-bottom: 1px solid map.get(colors_variables.$theme-colors, "line-color");
 
@@ -20,7 +21,8 @@
     padding: 0 31px 0 32px;
 
     &__name {
-      width: 311px;
+      width: 310px;
+      padding: 0;
       p {
         padding: 0 22px;
       }
