--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,56 +1,27 @@
 @use "sass:map";
 @use "../../theme/varables/sizes_variables" as sizes_variables;
 @use "../../theme/varables/colors_variables" as colors_variables;
-@use "../../theme/varables/font_size_variables" as font_size_variables;
+
+$footer-height: sizes_variables.$footer-height;
+$border-color: map.get(colors_variables.$colors, "line-color");
 
 .footer {
-  width: 100%;
-  height: sizes_variables.$footer-height;
-  display: flex;
-  justify-content: space-between;
-  border-top: 1px solid map.get(colors_variables.$theme-colors, "line-color");
+  height: $footer-height;
 
-  &__container {
-    display: flex;
-  }
-
-  &__tab {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    font-size: map.get(font_size_variables.$font-size, "label");
-    color: map.get(colors_variables.$theme-colors, "secondary-100");
-    padding: 0 14px;
-
-    a {
-      height: 20px;
-      text-decoration: none;
-      p {
-        color: map.get(colors_variables.$theme-colors, "secondary-100");
-      }
-    }
-    img {
-      width: 20px;
-      height: 20px;
-    }
-
-    &--left {
-      border-right: 1px solid
-        map.get(colors_variables.$theme-colors, "line-color");
-      &:first-child {
-        padding: 0 18px 0 22px;
-      }
+  &__border {
+    &--top {
+      border-top: 0.1rem solid $border-color;
     }
     &--right {
-      border-left: 1px solid
-        map.get(colors_variables.$theme-colors, "line-color");
-      a {
-        display: flex;
-        p {
-          margin: 0;
-          padding-right: 5px;
-        }
-      }
+      border-right: 0.1rem solid $border-color;
     }
+    &--left {
+      border-left: 0.1rem solid $border-color;
+    }
+  }
+
+  &__logo {
+    width: 2rem;
+    height: 2rem;
   }
 }
