--- a/src/index.scss
+++ b/src/index.scss
@@ -1,14 +1,10 @@
+@forward "/node_modules/bootstrap/scss/bootstrap";
 @forward "./theme/theme";
 
-html,
-body,
-* {
-  font-family: "Fira Code";
-  font-weight: 400;
+html {
+  font-size: 62.5%; /* 62.5% di 16px = 10px */
 }
 
-html,
-body{
-  padding: 0;
-  margin: 0;
+.cursor-default:hover{
+  cursor: default;
 }
