Continued hello page

--- a/src/pages/HelloPage/HelloPage.scss
+++ b/src/pages/HelloPage/HelloPage.scss
@@ -1,5 +1,49 @@
+@use "../../theme/varables/sizes_variables" as sizes_variables;
+
 .hello-page {
+  width: 100%;
+  min-height: calc(
+    100vh - sizes_variables.$header-height - sizes_variables.$footer-height
+  );
+
   &__bg-blurs {
-    width: 77.9rem;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+    opacity: 0;
+    animation: fadeInBgBlurs 1s ease-in forwards;
+  }
+}
+
+@keyframes fadeInBgBlurs {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 0.35;
+  }
+}
+
+.typewriter {
+  white-space: nowrap;
+  overflow: hidden;
+  width: 0;
+  animation: typing 1s steps(80, end) forwards;
+  animation-delay: 1s;
+  &-delay-1 {
+    animation-delay: 1.7s;
+  }
+  &-delay-2 {
+    animation-delay: 2.9s;
+  }
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
   }
 }
