--- a/src/pages/HelloPage/HelloPage.scss
+++ b/src/pages/HelloPage/HelloPage.scss
@@ -1,4 +1,5 @@
 @use "../../theme/varables/sizes_variables" as sizes_variables;
+@use "/node_modules/bootstrap/scss/bootstrap" as bootstrap;
 
 .hello-page {
   width: 100%;
