--- a/src/theme/varables/_typography_variables.scss
+++ b/src/theme/varables/_typography_variables.scss
@@ -2,26 +2,31 @@
 $typography: (
   "title": (
     "font-size": 6.2rem,
+    "font-size-sm": 6.2rem,
     "font-weight": 400,
     "font-family": "Fira Code",
   ),
   "subtitle": (
     "font-size": 3.2rem,
+    "font-size-sm": 2rem,
     "font-weight": 400,
     "font-family": "Fira Code",
   ),
   "body": (
     "font-size": 1.8rem,
+    "font-size-sm": 1.8rem,
     "font-weight": 400,
     "font-family": "Fira Code",
   ),
   "body-small": (
     "font-size": 1.6rem,
+    "font-size-sm": 1.6rem,
     "font-weight": 400,
     "font-family": "Fira Code",
   ),
   "body-extra-small": (
     "font-size": 1.4rem,
+    "font-size-sm": 1.4rem,
     "font-weight": 400,
     "font-family": "Fira Code",
   ),
