--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -7,10 +7,12 @@
   border-right: 0.1rem solid map.get(colors_variables.$colors, "line-color");
 
   &__icon {
-    width: 2.4rem;
-    height: 2.4rem;
     font-size: 2.4rem;
-    color: red;
+    color: map.get(colors_variables.$colors, "line-color");
+
+    &--selected{
+      color: map.get(colors_variables.$colors, "secondary-100");
+    }
 
     &__link {
       width: 100%;
