--- a/src/theme/varables/_colors_variables.scss
+++ b/src/theme/varables/_colors_variables.scss
@@ -14,6 +14,7 @@ $colors: (
   "gradient-start": #4d5bce,
   "gradient-end": #43d9ad,
   "white": #ffffff,
+  "file-explorer-icon": #81a1c1,
   "button-primary-background": #fea55f,
   "button-primary-text": #01080e,
   "button-primary-hover-background": #ffac6b,
