--- a/public/remix_icons/remixicon.scss
+++ b/public/remix_icons/remixicon.scss
@@ -21,6 +21,8 @@
   font-family: 'remixicon' !important;
   font-size: 16px;
   font-style:normal;
+  display: inline-block;
+  line-height: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
